# no-three-in-line---CP-SAT

./: LICENSE  README.md  citation.cff  no_three_in_line.py  pyproject.toml
